@@ -45,7 +45,7 @@ group :development do
 end
 
 group :system_tests do
-  gem 'beaker'
+  gem 'beaker', :git => 'https://github.com/trevor-vaughan/beaker', :ref => 'BKR-931-2.51.0'
   gem 'beaker-rspec'
   gem 'simp-beaker-helpers', '>= 1.0.5'
 end
